Issue #556458: Remove 'nowrap' attributes in uc_reports.

--- a/uc_reports/uc_reports.css
+++ b/uc_reports/uc_reports.css
@@ -25,6 +25,7 @@
 
 .uc-sales-table td {
   vertical-align: top;
+  white-space: nowrap;
 }
 
 form.uc-reports-customize-report-form fieldset.collapsible .fieldset-wrapper {
